...
    Column {
        Row {
            TextField(
                value = text,
                keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                modifier = Modifier
                    .testTag("equalizerInput")
                    .width(100.dp),
                singleLine = true,
                label = {
                    if (hz < 1000) {
                        Text(stringResource(R.string.hz, hz))
                    } else {
...
                },
                valueRange = volumeAdjustmentsMinVolume().toFloat()..volumeAdjustmentsMaxVolume().toFloat(),
                // The min/max values are not included in the steps number
                steps =
                ((volumeAdjustmentsMaxVolume() - volumeAdjustmentsMinVolume()) / volumeAdjustmentsStep()).roundToInt() -
                    1,
                modifier = Modifier.testTag("equalizerSlider"),
            )
        }
    }
}

@Preview(showBackground = true)
...
