...
@Composable
private fun PreviewReplaceCustomProfileDialog() {
    OpenSCQ30Theme {
        ReplaceCustomProfileDialog(
            isOpen = true,
            profiles = listOf(
                CustomProfile("Test Profile 1", 0.0, -1.0, 2.0, 3.0, 4.0, 5.0, 6.0, 7.0),
                CustomProfile("Test Profile 2", -5.0, -2.0, 3.0, 4.0, 5.0, 6.0, 7.0, 8.0),
            ),
            onDismiss = {},
            onProfileSelected = {},
        )
    }
...
