<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/refresh"
        android:id="@+id/refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:contentDescription="@string/refresh"
        app:showAsAction="ifRoom"/>
</menu>